Tweaked bios of the trainers

--- a/index.html
+++ b/index.html
@@ -76,24 +76,24 @@ class ListController extends AbstractActionController
             <h2 class="ui header embelish">The Right People</h2>
             <p>Our trainers are so helpful they're asked to speak at PHP conferences around the world!</p>
             <h3 class="ui header">
-                <img src="https://www.gravatar.com/avatar/79d9ba388d6b6cf4ec7310cad9fa8c8as?s=500"
-                     class="ui huge image">
+                <img src="https://www.gravatar.com/avatar/79d9ba388d6b6cf4ec7310cad9fa8c8as?s=200"
+                     class="ui huge circular image">
                 Rob Allen
             </h3>
-            <p>Rob Allen (gravatar rob@akrabat.com) Rob Allen is a developer and trainer with proven industry experience
+            <p>Rob Allen is a developer and trainer with proven industry experience
                 creating PHP applications. He contributes to various Open Source projects, including leadership of the
                 popular Slim Framework. He wrote the definitive book on Zend Framework and is a member of the Zend
                 Framework Review team. An experienced speaker, Rob has the ability to communicate complex ideas simply,
                 so that you can be sure you'll learn what you need to know from his courses.</p>
+
             <h3 class="ui header">
-                <img src="https://www.gravatar.com/avatar/699b873ae9616b36770e53c246e77377?s=500" class="ui huge image">
-                Gary Hockin
-            </h3>
-            <p>Gary (gravatar gary@hock.in) has been working in development for nearly 20 years and has been delivering
-                training for the last 8. He's a member of the Zend Framework Review team, and regularly contributes to
-                multiple Open Source projects. Gary's an internationally renowed speaker and has delivered keynotes at
-                several PHP conferences. Gary loves to teach, and prides himself on teaching through interactive live
-                coding.</p>
+                <img src="https://www.gravatar.com/avatar/699b873ae9616b36770e53c246e77377?s=200"
+                     class="ui circular image">
+                Gary Hockin</h3>
+            <p>Gary has been working in development for nearly 20 years and has been delivering training for the last
+                eight. He's a member of the Zend Framework Review team and regularly contributes to multiple Open Source
+                projects. Gary's an internationally renowned speaker and has delivered keynotes at several PHP
+                conferences. Gary loves to teach and prides himself on teaching through interactive live coding.</p>
             <div class="ui divider"></div>
             <h2 class="ui header embelish">Modern Tech</h2>
             <p>We can provide modern PHP language training, plus all the relevant technologies like databases, Composer
@@ -174,7 +174,8 @@ class ListController extends AbstractActionController
               method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
               target="_blank" novalidate>
             <div class="ui large action input">
-                <input type="email" value="" name="EMAIL" class="required email" placeholder="example@domain.com" id="mce-EMAIL">
+                <input type="email" value="" name="EMAIL" class="required email" placeholder="example@domain.com"
+                       id="mce-EMAIL">
                 <div class="response" id="mce-error-response" style="display:none"></div>
                 <div class="response" id="mce-success-response" style="display:none"></div>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -184,7 +185,8 @@ class ListController extends AbstractActionController
                            tabindex="-1" value="">
                 </div>
                 <button type="submit" value="Join" name="subscribe"
-                        id="mc-embedded-subscribe" class="ui button cta-button">Join</button>
+                        id="mc-embedded-subscribe" class="ui button cta-button">Join
+                </button>
             </div>
         </form>
         <!--End mc_embed_signup-->
