Added strict types declaration

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1 id="typed" class="ui inverted header">
             PHP Training
         </h1>
-        <pre id="intro-code"><code class="language-php"><&quest;php
+        <pre id="intro-code"><code class="language-php"><&quest;php declare(strict_types=1);
 
 use Zend\Expressive\Helper\ServerUrlMiddleware;
 use Zend\Expressive\Helper\UrlHelperMiddleware;
