--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ use Zend\Stratigility\Middleware\ErrorHandler;
 $app->pipe(ErrorHandler::class);
 $app->pipe(ServerUrlMiddleware::class);</code></pre>
 
-        <p class="ui blockquote intro-quote">
+        <h2 class="ui intro-quote blockquote">
             Finding the right people to improve your team's skills can be difficult, but here at PHP Training, we're
-            renowned for making even the most complicated topics understandable.
-        </p>
+            celebrated for making even the most complicated topics understandable.
+        </h2>
         <a data-scroll href="#cta" class="ui large button">Register now</a>
     </div>
 </section>
