--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ $app->pipe(ServerUrlMiddleware::class);</code></pre>
 
                 <div class="column left aligned pb">
                     <h2 class="ui header embelish left aligned">Unleashing Zend Expressive</h2>
-                <p>This two course uses interactive coding to introduce and then looks in detail at Zend Expressive 2.
+                <p>This two-day course uses interactive coding to introduce and then looks in detail at Zend Expressive 2.
                     We start by looking at the foundations of the framework and then turn our attention to how
                     middleware works and provides the power and flexibility in Expressive. You will learn how to build a
                     well-rounded website using the rich eco-system of components from Zend Framework and elsewhere with
