Added the logo to top of page

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
 <!-- Page Contents -->
 <section id="intro" class="ui inverted vertical masthead center aligned segment intro-header">
     <div class="ui text intro-text pt pb">
-        <h1 id="typed" class="ui inverted header">
-            PHP Training
-        </h1>
+        <img src="assets/images/php-training-logo.png" class="ui centered image huge" alt="PHP Training Logo" />
         <pre id="intro-code"><code class="language-php"><&quest;php declare(strict_types=1);
 
 use Zend\Expressive\Helper\ServerUrlMiddleware;
