Fixed spelling mistake.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ $app->pipe(ServerUrlMiddleware::class);</code></pre>
                     <h2 class="ui header embelish left aligned">Building APIs</h2>
                     <p>This two-day course has hands-on exercises to introduce API building with PHP. We start by
                         looking at HTTP and how APIs work and then turn our attention to building one out in PHP. You'll
-                        leave with a solid understanding of API theory, and you're own API built using what you've
+                        leave with a solid understanding of API theory, and your own API built using what you've
                         learned.</p>
                 </div>
                 <div class="column left aligned pb">
