--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
             around the world. You'll be part of a tiny group to make sure that the quality of the lessons is the highest
             possible, and lunch on both days will be provided.</p>
 
-        <!-- Noscript content for added SEO -->
         <noscript><a href="https://www.eventbrite.com/e/automated-testing-for-php-tickets-41380874309" rel="noopener noreferrer" target="_blank"></noscript>
-        <!-- You can customize this button any way you like -->
-        <button id="eventbrite-widget-modal-trigger-41380874309" type="button" class="ui large button" style="margin-bottom: 20px;">Buy Tickets</button>
+        <button id="eventbrite-widget-modal-trigger-41380874309" type="button" class="ui large button primary" style="margin-bottom: 20px;">Buy Tickets</button>
         <noscript></a>Buy Tickets on Eventbrite</noscript>
 
         <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
