--- a/index.html
+++ b/index.html
@@ -41,31 +41,6 @@
 <section id="intro" class="ui inverted vertical masthead center aligned segment intro-header">
     <div class="ui text intro-text pt pb">
         <img src="assets/images/php-training-logo.png" class="ui centered image huge" alt="PHP Training Logo"/>
-
-        <h1 class="ui">Next Course: Automated Testing for PHP</h1>
-        <h3 class="ui">Bristol, UK</h3>
-        <h3 class="ui">March 13th & 14th 2017</h3>
-        <p class="ui intro-quote justified" style="text-align: justify !important;">
-            Automatically testing your applications is incredibly important when you're developing professional,
-            resilient apps -- and working with PHP is no exception. Knowing how and where to start when you've decided
-            to start automated testing can be intimidating, so this two-day course in Bristol will cover (from scratch)
-            everything you'll need to know to start testing your applications with industry standard tools such as
-            PHPUnit. We'll include how to start testing (and why you should) and look at Unit, Integration and
-            Acceptance testing, along with how you can automate the running of your test suite using continuous
-            integration software for an even higher level of confidence.</p>
-
-        <p class="ui intro-quote justified" style="text-align: justify !important;">The course is suitable for complete beginners as well as those with a little experience in
-            writing automated
-            tests and is delivered by Rob Allen and Gary Hockin; two industry recognised experts who have given courses
-            around the world. You'll be part of a tiny group to make sure that the quality of the lessons is the highest
-            possible, and lunch on both days will be provided.</p>
-
-        <noscript><a href="https://www.eventbrite.com/e/automated-testing-for-php-tickets-41380874309" rel="noopener noreferrer" target="_blank"></noscript>
-        <button id="eventbrite-widget-modal-trigger-41380874309" type="button" class="ui large button primary" style="margin-bottom: 20px;">Buy Tickets</button>
-        <noscript></a>Buy Tickets on Eventbrite</noscript>
-
-        <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
-
         <script type="text/javascript">
             var exampleCallback = function() {
 
@@ -102,6 +77,37 @@
             celebrated for making even the most complicated topics understandable.
         </h2>
         <a data-scroll href="#cta" class="ui large button">Register now</a>
+    </div>
+</section>
+<section id="feature-course" class="ui vertical stripe pt pb">
+    <div class="ui middle stackable grid container">
+        <div class="ten wide column centered">
+
+
+            <h1 class="ui header embelish">Next Course: Automated Testing for PHP</h1>
+            <h3 class="ui header">Bristol, UK</h3>
+            <h3 class="ui header">March 13th & 14th 2017</h3>
+            <p class="ui intro-quote justified" style="text-align: justify !important;">
+                Automatically testing your applications is incredibly important when you're developing professional,
+                resilient apps -- and working with PHP is no exception. Knowing how and where to start when you've decided
+                to start automated testing can be intimidating, so this two-day course in Bristol will cover (from scratch)
+                everything you'll need to know to start testing your applications with industry standard tools such as
+                PHPUnit. We'll include how to start testing (and why you should) and look at Unit, Integration and
+                Acceptance testing, along with how you can automate the running of your test suite using continuous
+                integration software for an even higher level of confidence.</p>
+                <div class="ui divider"></div>
+            <p class="ui intro-quote justified" style="text-align: justify !important;">The course is suitable for complete beginners as well as those with a little experience in
+                writing automated
+                tests and is delivered by <a data-scroll href="#topics">Rob Allen</a> and <a data-scroll href="#topics">Gary Hockin</a>; two industry recognised experts who have given courses
+                around the world. You'll be part of a tiny group to make sure that the quality of the lessons is the highest
+                possible, and lunch on both days will be provided.</p>
+
+            <noscript><a href="https://www.eventbrite.com/e/automated-testing-for-php-tickets-41380874309" rel="noopener noreferrer" target="_blank"></noscript>
+            <button id="eventbrite-widget-modal-trigger-41380874309" type="button" class="fluid ui large button primary tickets-button">Buy Tickets</button>
+            <noscript></a>Buy Tickets on Eventbrite</noscript>
+
+            <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
+        </div>
     </div>
 </section>
 
