--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <!-- Open graph tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta property="og:title" content="PHP Training"/>
-    <meta property="og:description" content="Get training by some of the most accomplished professionals in field" />
+    <meta property="og:description" content="Get training by some of the most accomplished professionals in PHP; Next Course: Automated Testing for PHP - Bristol, UK - March 13th & 14th 2017" />
     <meta property="og:url" content="https://phptraining.co.uk/"/>
     <meta property="og:site_name" content="PHP Training"/>
     <meta property="og:type" content="website"/>
     <!-- Twitter card tags -->
-    <meta name="twitter:card" content="Next Course: Automated Testing for PHP - Bristol, UK - March 13th & 14th 2017">
     <meta name="twitter:site" content="@phptraininguk">
     <meta name="twitter:title" content="PHP Training">
-    <meta name="twitter:description" content="Automatically testing your applications is incredibly important when you're developing professional, resilient apps">
+    <meta name="twitter:description" content="Get training by some of the most accomplished professionals in PHP; Next Course: Automated Testing for PHP - Bristol, UK - March 13th & 14th 2017">
     <meta name="twitter:creator" content="@phptraininguk">
     <meta name="twitter:image" content="assets/images/php-training-logo.png">
     <link rel="icon" href="assets/images/favicon.ico">
