--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:title" content="PHP Training - Next Course: Automated Testing for PHP - Bristol, UK - March 13th & 14th 2017">
     <meta name="twitter:description" content="Automatically testing your applications is incredibly important when you're developing professional, resilient apps">
     <meta name="twitter:creator" content="@phptraininguk">
-    <meta name="twitter:image" content="assets/images/php-training-logo.png">
+    <meta name="twitter:image" content="https://phptraining.co.uk/assets/images/php-training-logo.png">
     <link rel="icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="assets/dist/semantic.min.css"/>
     <link rel="stylesheet" href="assets/dist/menu.css"/>
