Updated meta tags

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta content="text/html; charset=UTF-8" name="Content-Type" />
     <meta property="og:title" content="PHP Training"/>
-    <meta property="og:description" content="Get training by some of the most accomplished professionals in field" />
+    <meta property="og:description" content="Next Course: Automated Testing for PHP - Bristol, UK - March 13th & 14th 2017" />
     <meta property="og:url" content="https://phptraining.co.uk/"/>
     <meta property="og:site_name" content="PHP Training"/>
     <meta property="og:type" content="website"/>
     <!-- Twitter card tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@phptraininguk">
-    <meta name="twitter:title" content="PHP Training - Next Course: Automated Testing for PHP - Bristol, UK - March 13th & 14th 2017">
-    <meta name="twitter:description" content="Automatically testing your applications is incredibly important when you're developing professional, resilient apps">
+    <meta name="twitter:title" content="PHP Training">
+    <meta name="twitter:description" content="Next Course: Automated Testing for PHP - Bristol, UK - March 13th & 14th 2017">
     <meta name="twitter:creator" content="@phptraininguk">
     <meta name="twitter:image" content="https://phptraining.co.uk/assets/images/php-training-logo.png">
     <link rel="icon" href="assets/images/favicon.ico">
