--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <h1 class="ui header embelish">Next Course: Automated Testing for PHP</h1>
             <h3 class="ui header">Bristol, UK</h3>
             <h3 class="ui header">March 13th & 14th 2017</h3>
+            <h3 class="ui header">£1000 ex VAT</h3>
             <p class="ui intro-quote justified" style="text-align: justify !important;">
                 Automatically testing your applications is incredibly important when you're developing professional,
                 resilient apps -- and working with PHP is no exception. Knowing how and where to start when you've decided
