Removed next event for now and added me to people

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
         <div class="ten wide column centered">
             <img src="assets/images/php-training-log-no-bg.png" class="ui centered image huge" alt="PHP Training Logo"/>
 
-            <h1 class="ui header embelish">Next Course: Automated Testing for PHP</h1>
-            <h3 class="ui header">Bristol, UK</h3>
+            <h1 class="ui header embelish">Next Course: coming soon</h1>
+            <p class="ui intro-quote justified" style="text-align: justify !important;">
+                We're just sorting out the details of the next course - we'll confirm everything as soon as we can!
+            </p>
+            <!--<h3 class="ui header">Bristol, UK</h3>
             <h3 class="ui header">March 13th & 14th 2018</h3>
             <h3 class="ui header">£1000 ex VAT</h3>
             <p class="ui intro-quote justified" style="text-align: justify !important;">
@@ -81,7 +84,7 @@
             <button id="eventbrite-widget-modal-trigger-41380874309" type="button" class="fluid ui large button primary tickets-button">Buy Tickets</button>
             <noscript></a>Buy Tickets on Eventbrite</noscript>
 
-            <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
+            <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>-->
         </div>
     </div>
 </section>
@@ -146,13 +149,12 @@
                 so that you can be sure you'll learn what you need to know from his courses.</p>
 
             <h3 class="ui header">
-                <img src="https://www.gravatar.com/avatar/699b873ae9616b36770e53c246e77377?s=200"
+                <img src="https://www.gravatar.com/avatar/938a4092eb64596b9b857527d95e7075?s=200"
                      class="ui circular image">
-                Gary Hockin</h3>
-            <p>Gary has been working in development for nearly 20 years and has been delivering training for the last
-                eight. He's a member of the Zend Framework Review team and regularly contributes to multiple Open Source
-                projects. Gary's an internationally renowned speaker and has delivered keynotes at several PHP
-                conferences. Gary loves to teach and prides himself on teaching through interactive live coding.</p>
+                James Titcumb</h3>
+            <p>James is a consultant, trainer and developer at Roave. He is a prolific contributor to various open
+                source projects and is a Zend Certified Engineer. He also founded the UK based PHP Hampshire user group
+                and PHP South Coast conference.</p>
             <div class="ui divider"></div>
             <h2 class="ui header embelish">Modern Tech</h2>
             <p>We can provide modern PHP language training, plus all the relevant technologies like databases, Composer
