Drop Laravel tutorial

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
             <div class="ui divider"></div>
             <h2 class="ui header embelish">Learn About Specifics</h2>
             <p>Need more specific topics around the most popular frameworks and libraries? If you're looking for
-                training in Laravel, Symfony, Zend Framework or more general framework-less techniques (why be tied to
-                one product?) -- we've got you covered.</p>
+                training in Slim, Expressive, Symfony, Zend Framework or more general framework-less techniques (why be
+                tied to one product?) -- we've got you covered.</p>
         </div>
     </div>
 </section>
@@ -224,13 +224,6 @@
                         understanding of Zend Framework. We also look at some of the other components within ZF that
                         make for a more rounded application.</p>
                 </div>
-                <div class="column left aligned pb">
-                    <h2 class="ui header embelish left aligned">Using Laravel for Rapid Development</h2>
-                    <p>A two-day course delivered using hands-on exercises introduces the central concepts of Laravel.
-                        Using Laravel's opinionated rapid development concepts attendees will walk away with the
-                        knowledge of how to build their own fully functional software-as-a-service offering using
-                        Laravel's artisan offerings.</p>
-                </div>
             </div>
         </div>
     </div>
@@ -288,9 +281,9 @@
             <div class="three wide column">
                 <h4 class="ui inverted header">Courses</h4>
                 <div class="ui inverted link list">
+                    <a href="#courses" class="item">Unleashing Zend Expressive</a>
                     <a href="#courses" class="item">Building APIs</a>
                     <a href="#courses" class="item">Introducing Zend Framework</a>
-                    <a href="#courses" class="item">Using Laravel for Rapid Development</a>
                 </div>
             </div>
             <div class="seven wide column">
